--- a/content/about/_index.html
+++ b/content/about/_index.html
@@ -8,31 +8,14 @@ menu:
 ---
 
 
-{{< blocks/cover title="About Goldydocs" image_anchor="bottom" height="min" >}}
-
-<p class="lead mt-5">A sample site using the Docsy Hugo theme.
-</p>
-
+{{< blocks/cover title="About The Course" image_anchor="bottom" height="1" >}}
 {{< /blocks/cover >}}
 
 {{% blocks/lead %}}
-Goldydocs is a sample site using the <a href="https://github.com/google/docsy">Docsy</a> Hugo theme that shows what it can do and provides you with a template site structure. It’s designed for you to clone and edit as much as you like. See the different sections of the documentation and site for more ideas.
+This is a course on how ecological systems change through time and how to forecast how they will change in the future.
+It combines reading and discussing primary scientific literature with R tutorials on how to work with time-series data and make forecasts in R.
+It is taught each Fall at the University of Florida by Drs. Morgan Ernest and Ethan White.
+The full course including lecture notes and R tutorials is openly available on this site so that anyone can learn these important approaches and skills for themselves.
+Course materials are openly licensed and <a href="https://github.com/weecology/forecasting-course">developed on GitHub</a>.
+Anyone is welcome to use the material in their own courses and contributions are always welcome.
 {{% /blocks/lead %}}
-
-
-{{< blocks/section >}}
-<div class="col-12">
-<h1 class="text-center">This is another section</h1>
-</div>
-
-{{< /blocks/section >}}
-
-
-
-{{< blocks/section >}}
-
-<div class="col-12">
-<h1 class="text-center">This is another section</h1>
-</div>
-
-{{< /blocks/section >}}
