Fix link to new contributing page

--- a/content/_index.html
+++ b/content/_index.html
@@ -9,7 +9,7 @@ linkTitle = "Ecological Dynamics & Forecasting Course"
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
 		Lessons <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
-	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/weecology/forecasting-course">
+	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="contributing">
 		Contribute <i class="fab fa-github ml-2 "></i>
 	</a>
 	{{< blocks/link-down color="info" >}}
@@ -26,7 +26,7 @@ linkTitle = "Ecological Dynamics & Forecasting Course"
 
 {{< /blocks/section >}}
 
-{{< blocks/section >}}
+{{< blocks/section color="light">}}
 {{% blocks/feature icon="fa-lightbulb" title="Taught @UF" %}}
 This course is taught each Fall at the University of Florida by Drs. Morgan Ernest and Ethan White.
 {{% /blocks/feature %}}
