--- a/content/en/Contributing/_index.html
+++ b/content/en/Contributing/_index.html
@@ -16,5 +16,5 @@ Anyone is welcome to use the material in their own courses and contributions are
 * The course website is written in Hugo using the Docsy theme
 * Adding a new lesson involves making a copy of the lesson template and modifying it using markdown
 * The course is openly developed [on GitHub](https://github.com/weecology/forecasting-course)
-* [Open an issue](https://github.com/weecology/forecasting-course/issues/new) to say Hi or if there's anythign we can do to help!
+* [Open an issue](https://github.com/weecology/forecasting-course/issues/new) to say Hi or if there's anything we can do to help!
 {{% /blocks/section %}}
